fix modal z-index

--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 $padding-v: 30px;
